--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <link rel="stylesheet" href="styles/popup.css">
+  <head>
+    <link rel="stylesheet" href="styles/popup.css">
+  </head>
   <body>
     <h1 class="extension-title oswald-400">SkipIt</h1>
     <h2 class="select-services-title oswald-400">Select streaming services</h2>
